adding logic for ludo models

--- a/Background.html
+++ b/Background.html
@@ -5,7 +5,6 @@
       Your browser does not support the canvas element.
     </canvas>
     <script type="text/javascript" src="background.js"></script>
+    <script type="text/javascript" src="model.js"></script>
   </body>
 </html>
-
-
